# odop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: documentation.yml  python-ci.yml
benchmark/MHD/: README.md  generate-experiment.py
benchmark/ML/: GPT-neo-IMDB-finetuning.py  GPT-neo-IMDB-finetuning_with_odop.py  README.md  container.def  env.sh.template  odop_conf.yaml  odop_env.yml  run_odop.py  submit_lumi_N1.sh  submit_lumi_N1_with_odop.sh  submit_lumi_N3.sh  submit_lumi_N3_with_odop.sh  task.py
benchmark/heat_equation/: .gitignore  README.md  averages.py  main.py
benchmark/heat_equation/solver/: CMakeLists.txt  input.json
benchmark/heat_equation/solver/src/: CMakeLists.txt  io.cpp  lib.cpp
benchmark/scheduling_algorithms/: README.md  call.py  call_splitted.py  parse_data.py  run_benchmark.sh
docs/: CLI.md  CSC-Trition-libs.md  Tasks.md  algorithms.md  api.md  conf.py  cpu_binding.md  index.rst  meeting.md  task-specification.md  tasks-specification.md  tasks.md  triggers.md  tutorial.md
docs/api/: modules.rst  odop.cli.rst  odop.engine.rst  odop.rst  odop.scanner.rst  odop.scheduler.algorithms.rst  odop.scheduler.rst  odop.ui.rst  odop.utils.rst
docs/components/: engine.md  index.rst  scanner.md  task_manager.md
docs/examples/: task_specification_decorator.py
example_tasks/: README.md  example_task_1.json  example_task_1.py  example_task_with_decorator.py  odop_obs_conf.yaml  test.py
examples/: list_bucket.py  odop_conf.yaml  remove_container.py  run_monitoring.py  run_odop.py  run_odop_with_context.py
examples/MHD/: README.md  reduce.py  remove_mpi4py_and_lazyload.patch  requirements.txt  slice_rendering.py  specs.py  upload_file_batch.py  upload_folder_batch.py  upload_folder_batch_split.py  upload_once.py
examples/conda-containerize-pencil-code/: README.md  build.sh  clone_build_pencil_code.sh  env.yaml  post_install.sh  requirements.txt  run_pc.sh
examples/data_movement_task/: download_and_upload.py  run_example.py
examples/demo/: README.md
examples/example_tasks/: example_task_with_decorator_1.py  example_task_with_decorator_2.py  readme.md
examples/pip-containerize-odop/: README.md  clone_build_pencil_code.sh  containerize_odop.sh  disbatch.sh  python-dispatch.sh  slurm-9882697.out  slurm-9889538.out
observation/: implementation-note.md  monitoring.md  slurm-scheduling.md
odop/: README.md  __init__.py  common.py  engine.py  odop_obs.py  requirements.txt  scheduler.py  simulation.py  task.py  task_definition.py  task_manager.py  task_runner.py
odop/benchmark/: __init__.py
odop/cli/: __main__.py
odop/config/: odop_obs_conf.yaml
odop/engine/: cgroup.py  engine.py  execute_task.py
odop/example_tasks/: README.md  example_task_1.json  example_task_with_decorator.py
odop/odop_obs/: db.csv  exporter.py  node_aggregator.py  odop_obs.py  odop_obs_conf.yaml  odop_utils.py  probe.py  process_monitoring_probe.py  system_monitoring_probe.py  task_scheduler.py  test.py
odop/scanner/: odop_scanner.py  task_scanner.py
odop/scheduler/: __init__.py  api.py  controller.py  scheduler_task.py  task_manager.py  task_queue.py
odop/ui/: __init__.py  config.py  status.py  ui.py
odop/utils/: README.md  dashboard.py
odop_obs/: db.csv  exporter.py  mem_check.py  node_aggregator.py  odop_obs.py  odop_obs_conf.yaml  odop_utils.py  probe.py  process_monitoring_probe.py  system_monitoring_probe.py
odop_obs/config/: exporter_config.yaml  node_aggregator_config.yaml  odop_obs_conf.yaml  process_probe_conf.yaml  system_probe_conf.yaml
odop_obs/core/: common.py  probe.py
odop_obs/logs/: calculating_process_metric_latency.txt  calculating_system_metric_latency.txt  report_latency.txt
odop_obs/tests/: task_scheduler.py
src/example_tasks/: example_task_1.json  example_task_1.py  (+2 more)
tests/: disbatch.sh  test_engine.py  test_obs.py  test_start.py  test_task.py  test_task_reader.py
(+248 files in other folders)
