[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "odop"

[project]
name = "odop"
version = "0.0.1"
description = "ODOP Engine in HPC"
authors = []
readme = "README.md"
requires-python = ">=3.6"

dependencies = [
    "cloudpickle",
    "pandas"
]

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst_parser"
]

[project.urls]
Repository = "https://github.com/rdsea/odop"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable="missing-function-docstring, missing-class-docstring, missing-module-docstring"
# https://flit.pypa.io/en/latest/upload.html
# flit build
# flit publish --repository testpypi
# flit publish(odop) rantahj1@l23-0460:~/src/odop$ ^C

