[build-system]
requires = ["hatchling<1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["odop"]

[tool.hatch.build.targets.sdist]
include = ["odop"]

[project]
name = "odop"
version = "0.0.1"
description = "ODOP Engine in HPC"
authors = [
  { name = "AaltoSEA", email = "linh.truong@aalto.fi" },
  { name = "nguu0123", email = "nguu0123@gmail.com" },
  { name = "rantahar", email = "jarno.rantaharju@aalto.fi" },
  { name = "minhtribk12", email = "tri.m.nguyen@aalto.fi" },

]

license = { text = "Apache-2.0" }
readme = "README.md"
homepage = "https://rdsea.github.io/"

classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.6"

dependencies = [
  "cloudpickle",
  "qoa4ml==0.3.18",
  "matplotlib",
  "click",
  "fastapi",
  "pydantic-settings",
  "loguru>=0.7.2",
  "streamlit>=1.39.0",
]

[project.optional-dependencies]
dev = ["pytest", "mypy"]
docs = ["sphinx", "sphinx_rtd_theme", "myst_parser"]

[project.urls]
Repository = "https://github.com/rdsea/odop"
AaltoSEA = "https://rdsea.github.io/"

[tool.rye]
dev-dependencies = [
  "pre-commit",
  "ruff",
  "codespell",
  "pytest>=8.3.2",
  "pytest-sugar>=1.0.0",
  "tox>=4.18.0",
  "tox-uv>=1.11.2",
  "tox-gh-actions>=3.2.0",
  "mypy",
]
# source
[tool.setuptools.packages.find]
where = ["."]

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # Pycode styles
  "W",   # Pycode styles
  "N",   # Pep8 naming
  "I",   # Isort
  "UP",  # Pyupgrade
  "C4",  # Flake8 comprehension
  "ISC", # Flake8 implicit str concat
  "B",   # Flake8 bugbear
  "PGH", # Pygrep hook
  "RUF", # Ruff specific rules
]
ignore = [
  "E501",   # Line too long
  "RET504", # Unnecessary assignment
  "RET505", # Unnecessary else after return
  "C901",   # Too complex function
  "B904",   # raise-without-from-inside-except, enable when understand more
  "PLR",
  "ISC001",
]

[project.scripts]
odop = "odop.cli.__main__:odop_cli"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
[tool.rye.scripts]
dashboard = "streamlit run odop/utils/dashboard.py"
# https://flit.pypa.io/en/latest/upload.html
# flit build
# flit publish --repository testpypi
# flit publish(odop) rantahj1@l23-0460:~/src/odop$ ^C
